# psi4-whl

./: CMakeLists.txt  README.md  pyproject.toml
.github/: psi4-whl-overlay-files.txt
.github/workflows/: README.md  publish-pypi.yml  publish-release.yml  upstream-release-sync.yml  wheel-build.yml
devtools/scripts/: prepare_wheel_env.py  smoke_test_wheel.py  verify_wheelhouse.py
psi4/: CMakeLists.txt  __init__.py  cli.py  run_psi4.py
